--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Home
     <div class="row g-4">
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="/assets/images/bitcoin-basics.jpg" class="card-img-top" alt="Blockchain Basics">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top" alt="Blockchain Basics">
           <div class="card-body">
             <h5 class="card-title">🔗 Blockchain Basics</h5>
             <p class="card-text">Understand what a blockchain is, how it works, and why it matters.</p>
@@ -29,7 +29,7 @@ title: Home
       </div>
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="/assets/images/crypto-wallets.jpg" class="card-img-top" alt="Crypto Wallets">
+          <img src="{{ '/assets/images/crypto-wallets.jpg' | relative_url }}" class="card-img-top" alt="Crypto Wallets">
           <div class="card-body">
             <h5 class="card-title">👛 Crypto Wallets</h5>
             <p class="card-text">Learn about wallets, private keys, and how to keep your assets secure.</p>
@@ -39,7 +39,7 @@ title: Home
       </div>
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="/assets/images/bitcoin-ethereum.jpg" class="card-img-top" alt="Bitcoin & Ethereum">
+          <img src="{{ '/assets/images/bitcoin-ethereum.jpg' | relative_url }}" class="card-img-top" alt="Bitcoin & Ethereum">
           <div class="card-body">
             <h5 class="card-title">🪙 Bitcoin & Ethereum</h5>
             <p class="card-text">Discover how popular cryptocurrencies work and what they’re used for.</p>
