basic content structure

--- a/index.html
+++ b/index.html
@@ -3,59 +3,269 @@ layout: default
 title: Home
 ---
 
-<!-- Hero Section -->
-<section class="bg-light py-5 text-center">
-  <div class="container">
-    <h1 class="display-4">Learn Crypto with Confidence</h1>
-    <p class="lead">Explore the fundamentals of crypto, blockchain, and Web3 technology — all in one place.</p>
-    <a href="/web3-introduction" class="btn btn-primary btn-lg mt-3">Start Learning</a>
-  </div>
-</section>
+<div class="container py-5" style="max-width: 1000px;">
 
-<!-- Topics Grid -->
-<section class="py-5">
-  <div class="container">
-    <h2 class="mb-4 text-center">Explore Learning Topics</h2>
+  <h1 class="text-center mb-5">TheDime Academy – Web3 Education Portal</h1>
+
+  <!-- Module: Crypto Fundamentals -->
+  <section class="mb-5">
+    <h2 class="h4 mb-4">💡 Module: Crypto Fundamentals</h2>
     <div class="row g-4">
       <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
-          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top" alt="Blockchain Basics">
-          <div class="card-body">
-            <h5 class="card-title">🔗 Blockchain Basics</h5>
-            <p class="card-text">Understand what a blockchain is, how it works, and why it matters.</p>
-            <a href="/blockchain-basics" class="btn btn-primary">Learn More</a>
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="How blockchain works">
+          <div class="card-body text-center">
+            <a href="{{ '/fundamentals/how-blockchain-works' | relative_url }}" class="card-title h5 text-decoration-none text-dark">
+              How blockchain works
+            </a>
+            <p>
+              How blockchain technology works—covering blocks, consensus, and how networks stay secure and decentralized.
+            </p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
-          <img src="{{ '/assets/images/crypto-wallets.jpg' | relative_url }}" class="card-img-top" alt="Crypto Wallets">
-          <div class="card-body">
-            <h5 class="card-title">👛 Crypto Wallets</h5>
-            <p class="card-text">Learn about wallets, private keys, and how to keep your assets secure.</p>
-            <a href="/web3-introduction/wallet" class="btn btn-primary">Learn More</a>
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="What are cryptocurrencies?">
+          <div class="card-body text-center">
+            <a href="{{ '/fundamentals/what-are-cryptocurrencies' | relative_url }}" class="card-title h5 text-decoration-none text-dark">
+              What are cryptocurrencies?
+            </a>
+            <p>
+              A beginner-friendly overview of digital currencies, how they work, and why they matter in the Web3 ecosystem.
+            </p>
+            </p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
-          <img src="{{ '/assets/images/bitcoin-ethereum.jpg' | relative_url }}" class="card-img-top" alt="Bitcoin & Ethereum">
-          <div class="card-body">
-            <h5 class="card-title">🪙 Bitcoin & Ethereum</h5>
-            <p class="card-text">Discover how popular cryptocurrencies work and what they’re used for.</p>
-            <a href="/bitcoin-ethereum" class="btn btn-primary">Learn More</a>
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="Introduction to Bitcoin">
+          <div class="card-body text-center">
+            <a href="{{ '/fundamentals/introduction-to-bitcoin' | relative_url }}" class="card-title h5 text-decoration-none text-dark">
+              Introduction to Bitcoin
+            </a>
+            <p>
+              Learn the origins of Bitcoin, why it was created, and how it works as a decentralized digital currency.
+            </p>
+            </p>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- Feature Section -->
-<section class="py-5 bg-light">
-  <div class="container text-center">
-    <h2 class="mb-4">Ready to Dive Deeper?</h2>
-    <p class="lead">Join The Dime Academy and explore Web3 with hands-on lessons, real tools, and a supportive community.</p>
-    <a href="/courses" class="btn btn-outline-primary btn-lg">Browse All Courses</a>
-  </div>
-</section>
+  <!-- Module: Crypto Investing Fundamentals -->
+  <section class="mb-5">
+    <h2 class="h4 mb-4">💰 Module: Crypto Investing Fundamentals</h2>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="Understanding different types of cryptocurrency">
+          <div class="card-body text-center">
+            <a href="{{ '/crypto-investing/understanding-different-types' | relative_url }}" class="card-title h5 text-decoration-none text-dark">
+              Understanding different types of cryptocurrency
+            </a>
+            <p>
+              Explore the major types of crypto assets—coins, tokens, stablecoins, and their roles in different ecosystems.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="How to use crypto wallet">
+          <div class="card-body text-center">
+            <a href="{{ '/crypto-investing/introduction-to-wallet' | relative_url }}" class="card-title h5 text-decoration-none text-dark">
+              Introduction to wallet
+            </a>
+            <p>
+              Learn the difference between custodial and non-custodial wallets, and how to securely store and manage your crypto.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="Centralised and decentralised exchange">
+          <div class="card-body text-center">
+            <a href="{{ '/crypto-investing/exchanges' | relative_url }}" class="card-title h5 text-decoration-none text-dark">
+              Centralised and decentralised exchange
+            </a>
+            <p>
+              Understand the difference between centralized (CEX) and decentralized (DEX) exchanges, and how to choose the right one for your needs.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Module: DeFi -->
+  <section class="mb-5">
+    <h2 class="h4 mb-4">🌊 Module: DeFi</h2>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="Introduction to DeFi">
+          <div class="card-body text-center">
+            <a href="{{ '/defi/introduction-to-defi' | relative_url }}" class="card-title h5 text-decoration-none text-dark">
+              Introduction to DeFi
+            </a>
+            <p>
+              Discover how decentralized finance is reshaping the world of banking by enabling peer-to-peer lending, trading, and earning—without intermediaries.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="Staking explained">
+          <div class="card-body text-center">
+            <a href="{{ '/defi/staking-explained' | relative_url }}" class="card-title h5 text-decoration-none text-dark">
+              Staking explained
+            </a>
+            <p>
+              Learn how staking secures blockchain networks and lets users earn passive rewards by locking their tokens.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="Earning yield safely">
+          <div class="card-body text-center">
+            <a href="{{ '/defi/earning-yield' | relative_url }}" class="card-title h5 text-decoration-none text-dark">
+              Earning yield safely
+            </a>
+            <p>
+              Explore how to earn interest on your crypto safely by lending, staking, or providing liquidity through trusted DeFi platforms.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Module: Web3 -->
+  <section class="mb-5">
+    <h2 class="h4 mb-4">🌐 Module: Web3</h2>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="Guide to Web3">
+          <div class="card-body text-center">
+            <a href="{{ '/web3/guide-to-web3' | relative_url }}" class="card-title h5 text-decoration-none text-dark">
+              Guide to Web3
+            </a>
+            <p>
+              Understand the fundamentals of Web3—how it decentralizes the internet, empowers users, and enables blockchain-based apps.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="Understanding NFT">
+          <div class="card-body text-center">
+            <a href="{{ '/web3/understanding-nft' | relative_url }}" class="card-title h5 text-decoration-none text-dark">
+              Understanding NFT
+            </a>
+            <p>
+              Learn what Non-Fungible Tokens (NFTs) are, how they differ from cryptocurrencies, and why they’re revolutionizing digital ownership and collectibles.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="OG NFT">
+          <div class="card-body text-center">
+            <a href="{{ '/web3/og-nft' | relative_url }}" class="card-title h5 text-decoration-none text-dark">
+              OG NFT
+            </a>
+            <p>
+              Explore the exclusive OG NFT by TheDime—its purpose, perks, and how it unlocks access to rewards, community roles, and Web3 experiences.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Module: Safety -->
+  <section class="mb-5">
+    <h2 class="h4 mb-4">🛡 Module: Safety</h2>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="Hot vs Cold wallet">
+          <div class="card-body text-center">
+            <a href="{{ '/safety/hot-vs-cold-wallet' | relative_url }}" class="card-title h5 text-decoration-none text-dark">
+              Hot vs Cold wallet
+            </a>
+            <p>
+              Learn the key differences between hot and cold wallets, and how to choose the right one to balance convenience and security for your crypto.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="Phishing, Rug pulls">
+          <div class="card-body text-center">
+            <a href="{{ '/safety/phishing-rug-pulls' | relative_url }}" class="card-title h5 text-decoration-none text-dark">
+              Phishing, Rug pulls
+            </a>
+            <p>
+              Learn how to spot common crypto scams like phishing and rug pulls, and protect yourself from losing funds through fake links and deceptive projects.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="What to do if compromised">
+          <div class="card-body text-center">
+            <a href="{{ '/safety/what-to-do-if-compromised' | relative_url }}" class="card-title h5 text-decoration-none text-dark">
+              What to do if compromised
+            </a>
+            <p>
+              Learn the immediate steps to take if your crypto wallet is hacked or exposed—recover funds, secure accounts, and prevent future breaches.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Module: Using TheDime -->
+  <section class="mb-5">
+    <h2 class="h4 mb-4">⚙️ Module: Using TheDime</h2>
+    <div class="row g-4">
+      <div class="col-md-4">  
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="Using TheDime">
+          <div class="card-body text-center">
+            <a href="{{ '/thedime' | relative_url }}" class="card-title h5 text-decoration-none text-dark">Using TheDime</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Module: Community & Referral -->
+  <section class="mb-5">
+    <h2 class="h4 mb-4">🤝 Module: Community & Referral</h2>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card h-100 border-0 shadow-sm">
+          <img src="{{ '/assets/images/bitcoin-basics.jpg' | relative_url }}" class="card-img-top rounded-top" alt="Community & Referral">
+          <div class="card-body text-center">
+            <a href="{{ '/community' | relative_url }}" class="card-title h5 text-decoration-none text-dark">Community & Referral</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
